[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
wasm-builder-runner = { package = 'substrate-wasm-builder-runner', version = '2.0.0' }

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
pallet-staking-reward-curve = '2.0.0'
bigint = '4.2.0'
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.101' }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = '2.0.0' }
frame-executive = { default-features = false, version = '2.0.0' }
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
frame-system-benchmarking = { default-features = false, optional = true, version = '2.0.0' }
frame-system-rpc-runtime-api = { default-features = false, version = '2.0.0' }
pallet-aura = { default-features = false, version = '2.0.0' }
pallet-balances = { default-features = false, version = '2.0.0' }
pallet-grandpa = { default-features = false, version = '2.0.0' }
pallet-randomness-collective-flip = { default-features = false, version = '2.0.0' }
pallet-sudo = { default-features = false, version = '2.0.0' }
pallet-timestamp = { default-features = false, version = '2.0.0' }
pallet-transaction-payment = { default-features = false, version = '2.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '2.0.0' }
sp-api = { default-features = false, version = '2.0.0' }
sp-block-builder = { default-features = false, version = '2.0.0' }
sp-consensus-aura = { default-features = false, version = '0.8.0' }
sp-core = { default-features = false, version = '2.0.0' }
sp-inherents = { default-features = false, version = '2.0.0' }
sp-offchain = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-session = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }
sp-transaction-pool = { default-features = false, version = '2.0.0' }
sp-version = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-staking = { default-features = false, version = '2.0.0' }

[dependencies.contracts]
default-features = false
package = 'pallet-contracts'
version = '2.0.0'

[dependencies.contracts-primitives]
default-features = false
package = 'pallet-contracts-primitives'
version = '2.0.0'

[dependencies.assets]
default-features = false
package = 'pallet-assets'
version = '2.0.0'

[dependencies.scheduler]
default-features = false
package = 'pallet-scheduler'
version = '2.0.0'

[dependencies.collective]
default-features = false
package = 'pallet-collective'
version = '2.0.0'

[dependencies.elections-phragmen]
default-features = false
package = 'pallet-elections-phragmen'
version = '2.0.0'

[dependencies.treasury]
default-features = false
package = 'pallet-treasury'
version = '2.0.0'

[dependencies.democracy]
default-features = false
package = 'pallet-democracy'
version = '2.0.0'

[dependencies.elections]
default-features = false
package = 'pallet-elections'
version = '2.0.0'

[dependencies.society]
default-features = false
package = 'pallet-society'
version = '2.0.0'

[dependencies.scored-pool]
default-features = false
package = 'pallet-scored-pool'
version = '2.0.0'

[dependencies.membership]
default-features = false
package = 'pallet-membership'
version = '2.0.0'

[dependencies.evm]
default-features = false
package = 'pallet-evm'
version = '2.0.0'

[dependencies.did]
default-features = false
git = 'https://github.com/substrate-developer-hub/pallet-did'
package = 'pallet-did'
version = '2.0.0'

[dependencies.registrar]
default-features = false
git = 'https://github.com/MVPWorkshop/substrate-enterprise-sample'
package = 'pallet-registrar'
version = '2.0.0'

[dependencies.babe]
default-features = false
package = 'pallet-babe'
version = '2.0.0'

[dependencies.authorship]
default-features = false
package = 'pallet-authorship'
version = '2.0.0'

[dependencies.staking]
default-features = false
package = 'pallet-staking'
version = '2.0.0'

[dependencies.session]
default-features = false
package = 'pallet-session'
version = '2.0.0'

[dependencies.validator-set]
default-features = false
git = 'https://github.com/MVPWorkshop/substrate-validator-set'
package = 'substrate-validator-set'
branch = 'master'
version = '0.2.0'

[dependencies.rbac]
default-features = false
git = 'https://github.com/MVPWorkshop/substrate-rbac'
package = 'substrate-rbac'
branch = 'enterprise-sample'
version = '0.1.0'

[dependencies.atomic-swap]
default-features = false
package = 'pallet-atomic-swap'
version = '2.0.0'

[dependencies.multisig]
default-features = false
package = 'pallet-multisig'
version = '2.0.0'

[dependencies.product-registry]
default-features = false
git = 'https://github.com/MVPWorkshop/substrate-enterprise-sample'
package = 'pallet-product-registry'
version = '2.0.0'

[dependencies.product-tracking]
default-features = false
git = 'https://github.com/MVPWorkshop/substrate-enterprise-sample'
package = 'pallet-product-tracking'
version = '2.0.0'

[dependencies.proxy]
default-features = false
package = 'pallet-proxy'
version = '2.0.0'

[dependencies.authority-discovery]
default-features = false
package = 'pallet-authority-discovery'
version = '2.0.0'

[dependencies.im-online]
default-features = false
package = 'pallet-im-online'
version = '2.0.0'

[dependencies.indices]
default-features = false
package = 'pallet-indices'
version = '2.0.0'

[dependencies.utility]
default-features = false
package = 'pallet-utility'
version = '2.0.0'

[dependencies.recovery]
default-features = false
package = 'pallet-recovery'
version = '2.0.0'

[dependencies.vesting]
default-features = false
package = 'pallet-vesting'
version = '2.0.0'

[dependencies.identity]
default-features = false
package = 'pallet-identity'
version = '2.0.0'

[dependencies.nicks]
default-features = false
package = 'pallet-nicks'
version = '2.0.0'

[dependencies.offences]
default-features = false
package = 'pallet-offences'
version = '2.0.0'

[dependencies.finality-tracker]
default-features = false
package = 'pallet-finality-tracker'
version = '2.0.0'

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sp-io/std',
    'sp-staking/std',
	'contracts/std',
	'contracts-primitives/std',
	'assets/std',
	'scheduler/std',
	'collective/std',
	'elections-phragmen/std',
	'treasury/std',
	'democracy/std',
	'elections/std',
	'society/std',
	'scored-pool/std',
	'membership/std',
	'evm/std',
	'did/std',
	'registrar/std',
	'babe/std',
	'authorship/std',
	'staking/std',
	'session/std',
	'validator-set/std',
	'rbac/std',
	'atomic-swap/std',
	'multisig/std',
	'product-registry/std',
	'product-tracking/std',
	'proxy/std',
	'authority-discovery/std',
	'im-online/std',
	'indices/std',
	'utility/std',
	'recovery/std',
	'vesting/std',
	'identity/std',
	'nicks/std',
	'offences/std',
	'finality-tracker/std',
]
